fix: improve contrast for input elements
According to A11y best practices input elements should have a
contrast ratio of at least 3:1 with surrounding elements.

After this change, the border color of many input elements changes
from #ddd to #87929D. The latter has a contrast ratio of > 3 with
the theme's default background color: #fff.

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ select {
   -moz-appearance: none;
   background: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='6' viewBox='0 0 10 6'%3E%3Cpath fill='%23CCC' d='M0 0h10L5 6 0 0z'/%3E%3C/svg%3E%0A") no-repeat #fff;
   background-position: right 10px center;
-  border: 1px solid #ddd;
+  border: 1px solid #87929D;
   border-radius: 4px;
   padding: 8px 30px 8px 10px;
   outline: none;
@@ -287,7 +287,7 @@ select::-ms-expand {
 }
 
 textarea {
-  border: 1px solid #ddd;
+  border: 1px solid #87929D;
   border-radius: 2px;
   resize: vertical;
   width: 100%;
@@ -428,7 +428,7 @@ ul {
 
 .button-secondary {
   color: lighten($text_color, 20%);
-  border: 1px solid #ddd;
+  border: 1px solid #87929D;
   background-color: transparent;
 }
 
@@ -438,7 +438,7 @@ ul {
 
 .button-secondary:hover, .button-secondary:focus, .button-secondary:active {
   color: $text_color;
-  border: 1px solid #ddd;
+  border: 1px solid #87929D;
   background-color: darken($background_color, 3%);
 }
 
@@ -565,7 +565,7 @@ ul {
 }
 
 .form-field input {
-  border: 1px solid #ddd;
+  border: 1px solid #87929D;
   border-radius: 4px;
   padding: 10px;
   width: 100%;
@@ -576,7 +576,7 @@ ul {
 }
 
 .form-field input[type="text"] {
-  border: 1px solid #ddd;
+  border: 1px solid #87929D;
   border-radius: 4px;
 }
 
@@ -1090,7 +1090,7 @@ ul {
 }
 
 .search {
-  border-color: #ddd;
+  border-color: #87929D;
   border-radius: 30px;
   border-style: solid;
   border-width: 1px;
@@ -2036,7 +2036,7 @@ ul {
 }
 
 .article-return-to-top {
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #87929D;
 }
 
 @media (min-width: 1024px) {
