--- a/styles/_blocks.scss
+++ b/styles/_blocks.scss
@@ -41,7 +41,7 @@
 
     &-internal {
       background-color: transparent;
-      border: 1px solid $border-color;
+      border: 1px solid $low-contrast-border-color;
 
       .icon-lock {
         height: 15px;
