--- a/styles/_recent-activity.scss
+++ b/styles/_recent-activity.scss
@@ -9,7 +9,7 @@
   &-list { padding: 0; }
 
   &-item {
-    border-bottom: 1px solid $border-color;
+    border-bottom: 1px solid $low-contrast-border-color;
     overflow: auto;
     padding: 20px 0;
   }
