--- a/styles/_striped_list.scss
+++ b/styles/_striped_list.scss
@@ -10,7 +10,7 @@
     }
 
     align-items: flex-start;
-    border-bottom: 1px solid $border-color;
+    border-bottom: 1px solid $low-contrast-border-color;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
