--- a/styles/_user-profiles.scss
+++ b/styles/_user-profiles.scss
@@ -324,7 +324,7 @@
   }
 
   &-item {
-    border-top: 1px solid $border-color;
+    border-top: 1px solid $low-contrast-border-color;
     display: flex;
     flex: 1;
     flex-direction: row;
